--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
         "psr-4": {
             "App\\": "./app"
         }
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.4"
     }
 }
